[gd_scene load_steps=3 format=3 uid="uid://c15njlc5il2w8"]

[ext_resource type="Script" path="res://Levels/level_select.gd" id="1_chjil"]
[ext_resource type="Texture2D" uid="uid://cq17gmqbewcvn" path="res://Assets/GravityBackground.jpg" id="1_mxv8c"]

[node name="Level_Select" type="Node2D"]
script = ExtResource("1_chjil")

[node name="GravityBackground" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.67, 0.67)
texture = ExtResource("1_mxv8c")

[node name="Title" type="Label" parent="GravityBackground"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1285.0
offset_top = -475.0
offset_right = -635.0
offset_bottom = -275.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "LEVEL SELECT"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="Button" parent="."]
offset_left = 40.0
offset_top = 30.0
offset_right = 190.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 40
text = "MENU"

[node name="LeftButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = 361.0
offset_right = 200.001
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "<
"
metadata/_edit_use_anchors_ = true

[node name="RightButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1075.0
offset_top = 361.0
offset_right = 1175.0
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = ">"
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Buttons0" type="Control" parent="Buttons"]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 360.0
offset_right = 680.0
offset_bottom = 400.0
scale = Vector2(0.7, 0.7)

[node name="Level_1_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -270.0
offset_right = -445.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Level_2_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -270.0
offset_right = -195.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "2"

[node name="Level_3_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -270.0
offset_right = 55.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "3"

[node name="Level_4_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -270.0
offset_right = 305.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "4"

[node name="Level_5_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = -270.0
offset_right = 555.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "5"

[node name="Level_6_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -20.0
offset_right = -445.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "6
"

[node name="Level_7_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -20.0
offset_right = -195.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "7
"

[node name="Level_8_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -20.0
offset_right = 55.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "8
"

[node name="Level_9_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -20.0
offset_right = 305.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "9
"

[node name="Level_10_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = -20.0
offset_right = 555.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "10
"

[node name="Level_11_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = 230.0
offset_right = -445.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "11"

[node name="Level_12_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = 230.0
offset_right = -195.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "12
"

[node name="Level_13_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 230.0
offset_right = 55.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "13"

[node name="Level_14_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = 230.0
offset_right = 305.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "14"

[node name="Level_15_Button" type="Button" parent="Buttons/Buttons0" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = 230.0
offset_right = 555.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "15"

[node name="Buttons1" type="Control" parent="Buttons"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 360.0
offset_right = 680.0
offset_bottom = 400.0
scale = Vector2(0.7, 0.7)

[node name="Level_16_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -270.0
offset_right = -445.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "16"

[node name="Level_17_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -270.0
offset_right = -195.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "17"

[node name="Level_18_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -270.0
offset_right = 55.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "18"

[node name="Level_19_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -270.0
offset_right = 305.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "19"

[node name="Level_20_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = -270.0
offset_right = 555.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "20"

[node name="Level_21_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -20.0
offset_right = -445.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "21
"

[node name="Level_22_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -20.0
offset_right = -195.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "22
"

[node name="Level_23_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -20.0
offset_right = 55.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "23
"

[node name="Level_24_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = -20.0
offset_right = 305.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "24"

[node name="Level_25_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = -20.0
offset_right = 555.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "25"

[node name="Level_26_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = 230.0
offset_right = -445.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "26"

[node name="Level_27_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = 230.0
offset_right = -195.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "27
"

[node name="Level_28_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 230.0
offset_right = 55.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "28"

[node name="Level_29_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 155.0
offset_top = 230.0
offset_right = 305.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "29"

[node name="Level_30_Button" type="Button" parent="Buttons/Buttons1" groups=["buttons"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = 230.0
offset_right = 555.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "30"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Buttons/Buttons0/Level_1_Button" to="." method="_on_level_button_pressed" binds= [1]]
[connection signal="pressed" from="Buttons/Buttons0/Level_2_Button" to="." method="_on_level_button_pressed" binds= [2]]
[connection signal="pressed" from="Buttons/Buttons0/Level_3_Button" to="." method="_on_level_button_pressed" binds= [3]]
[connection signal="pressed" from="Buttons/Buttons0/Level_4_Button" to="." method="_on_level_button_pressed" binds= [4]]
[connection signal="pressed" from="Buttons/Buttons0/Level_5_Button" to="." method="_on_level_button_pressed" binds= [5]]
[connection signal="pressed" from="Buttons/Buttons0/Level_6_Button" to="." method="_on_level_button_pressed" binds= [6]]
[connection signal="pressed" from="Buttons/Buttons0/Level_7_Button" to="." method="_on_level_button_pressed" binds= [7]]
[connection signal="pressed" from="Buttons/Buttons0/Level_8_Button" to="." method="_on_level_button_pressed" binds= [8]]
[connection signal="pressed" from="Buttons/Buttons0/Level_9_Button" to="." method="_on_level_button_pressed" binds= [9]]
[connection signal="pressed" from="Buttons/Buttons0/Level_10_Button" to="." method="_on_level_button_pressed" binds= [10]]
[connection signal="pressed" from="Buttons/Buttons0/Level_11_Button" to="." method="_on_level_button_pressed" binds= [11]]
[connection signal="pressed" from="Buttons/Buttons0/Level_12_Button" to="." method="_on_level_button_pressed" binds= [12]]
[connection signal="pressed" from="Buttons/Buttons0/Level_13_Button" to="." method="_on_level_button_pressed" binds= [13]]
[connection signal="pressed" from="Buttons/Buttons0/Level_14_Button" to="." method="_on_level_button_pressed" binds= [14]]
[connection signal="pressed" from="Buttons/Buttons0/Level_15_Button" to="." method="_on_level_button_pressed" binds= [15]]
[connection signal="pressed" from="Buttons/Buttons1/Level_16_Button" to="." method="_on_level_button_pressed" binds= [16]]
[connection signal="pressed" from="Buttons/Buttons1/Level_17_Button" to="." method="_on_level_button_pressed" binds= [17]]
[connection signal="pressed" from="Buttons/Buttons1/Level_18_Button" to="." method="_on_level_button_pressed" binds= [18]]
[connection signal="pressed" from="Buttons/Buttons1/Level_19_Button" to="." method="_on_level_button_pressed" binds= [19]]
[connection signal="pressed" from="Buttons/Buttons1/Level_20_Button" to="." method="_on_level_button_pressed" binds= [20]]
[connection signal="pressed" from="Buttons/Buttons1/Level_21_Button" to="." method="_on_level_button_pressed" binds= [21]]
[connection signal="pressed" from="Buttons/Buttons1/Level_22_Button" to="." method="_on_level_button_pressed" binds= [22]]
[connection signal="pressed" from="Buttons/Buttons1/Level_23_Button" to="." method="_on_level_button_pressed" binds= [23]]
[connection signal="pressed" from="Buttons/Buttons1/Level_24_Button" to="." method="_on_level_button_pressed" binds= [24]]
[connection signal="pressed" from="Buttons/Buttons1/Level_25_Button" to="." method="_on_level_button_pressed" binds= [25]]
[connection signal="pressed" from="Buttons/Buttons1/Level_26_Button" to="." method="_on_level_button_pressed" binds= [26]]
[connection signal="pressed" from="Buttons/Buttons1/Level_27_Button" to="." method="_on_level_button_pressed" binds= [27]]
[connection signal="pressed" from="Buttons/Buttons1/Level_28_Button" to="." method="_on_level_button_pressed" binds= [28]]
[connection signal="pressed" from="Buttons/Buttons1/Level_29_Button" to="." method="_on_level_button_pressed" binds= [29]]
[connection signal="pressed" from="Buttons/Buttons1/Level_30_Button" to="." method="_on_level_button_pressed" binds= [30]]
